course/deploy-on-kubernetes/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-to-postgres
spec:
  selector:
    app: svc-to-postgres
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
